nav collapse fix

--- a/style.css
+++ b/style.css
@@ -1035,8 +1035,48 @@ footer h5 {
     }
 }
 
-@media screen and (max-width: 997px) {
-nav.primary-navigation.navbar-collapse.bs-navbar-collapse.navbar-right.collapse.in, nav.primary-navigation.navbar-collapse.bs-navbar-collapse.navbar-right.collapsing {
+@media (max-width: 1000px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+  		position:relative;
+  		margin-top: 4px;
+  		display: block;
+    }
+    .icon-bar {
+		background-color: #292422;
+	}
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-nav {
+        float: none !important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display: block !important;
+    }
+    nav.primary-navigation.navbar-collapse.bs-navbar-collapse.navbar-right.collapse.in,
+    nav.primary-navigation.navbar-collapse.bs-navbar-collapse.navbar-right.collapsing {
       overflow-x: hidden;
     }
 }
